@@ -11,7 +11,6 @@ import org.app.carsharingapp.repository.CarRepository;
 import org.app.carsharingapp.service.CarService;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
@@ -19,7 +18,6 @@ public class CarServiceImpl implements CarService {
     private final CarRepository carRepository;
     private final CarMapper carMapper;
 
-    @Transactional
     @Override
     public CarDto createCar(CarDto carDto) {
         Car savedCar = carRepository.save(carMapper.toModel(carDto));
@@ -40,7 +38,7 @@ public class CarServiceImpl implements CarService {
     public List<CarDto> getAllCars(Pageable pageable) {
         return carRepository.findAll(pageable).stream()
                 .map(carMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
